# aegis-manager

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: common.rs  lib.rs  task.rs  tui.rs
src/task/: mod.rs
src/task/checkhealth/: mod.rs  tips.rs  vpn.rs
src/task/checkhealth/autofixable/: mod.rs  vpn.rs
src/task/checkhealth/tips/: mod.rs
