[package]
name = "aegis"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
cursive = "0.19.0"
flexi_logger = { version = "0.23.0", features = ["use_chrono_for_offset"] }
inquire = "0.4.0"
log = "0.4.17"
tokio = { version = "1.20.1", features = ["full"] }

[features]
dummy = []
